编程思想2： 基本类型初始值，最大值，精度 char到底占用几个字节 操作符号短路 数值计算